<!--
  ~ Oburo.O est un programme destinée à saisir son temps de travail sur un support Android.
  ~
  ~     This file is part of Oburo.O
  ~     Oburo.O is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_calendrier"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    tools:context="fr.s3i.pointeuse.presentation.calendrier.CalendrierVue" >

    <DatePicker
        android:id="@+id/calendrier"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:startYear="2000"
        android:endYear="2100"
        android:datePickerMode="spinner"
        android:calendarViewShown="false" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/trijour"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <RadioButton
            android:id="@+id/trijour"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/jour"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/trisemaine"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/semaine"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/trimois"
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/mois"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/triannee"
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/annee"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/duree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:gravity="center" />

    <ListView
        android:id="@+id/calendrier_liste"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>
