<!--
  ~ Oburo.O est un programme destinée à saisir son temps de travail sur un support Android.
  ~
  ~     This file is part of Oburo.O
  ~     Oburo.O is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    tools:context="fr.s3i.pointeuse.presentation.pointer.PointerVue" >

    <TextView
        android:id="@+id/txtPointageRapide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:layout_gravity="top"
        android:layout_weight="0"
        android:textColor="@android:color/tab_indicator_text" />

    <Button
        android:background="@drawable/bouton123"
        android:id="@+id/btnPointer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pointer"
        android:textSize="16sp"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_gravity="top"
        android:layout_weight="0"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:background="@drawable/bouton123"
        android:id="@+id/btnInserer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserer"
        android:textSize="16sp"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_gravity="top"
        android:layout_weight="0"
        android:textColor="@color/cardview_light_background" />

    <TextView
        android:id="@+id/txtPointageEnCours"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:layout_gravity="start"
        android:textColor="@android:color/tab_indicator_text" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imgS3i"
            android:layout_width="wrap_content"
            android:src="@drawable/bandeau_s3i"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:contentDescription="@string/app_name" />

    </FrameLayout>

</LinearLayout>
